Major refactoring of Criteria model: - CatalogEntries simply keep track of IDs of Criterias - Spring is use to instantiate Criterias based on registered IDs. - Introduced a Spring stereotype annotation for MetaDataCriteria implementations.